--- a/style.css
+++ b/style.css
@@ -60,11 +60,24 @@ body {
   border-radius: 20px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.5);
 }
+h2.lista{
+  text-align: center;
+  font-size: 3em;
+  margin:0;
+  margin-top: 20px;
+}
 .projetos ul {
   list-style: none;
   padding-left: 0;
   font-weight: 700;
   font-size: 24px;
+  margin: 0;
+}
+li p.nome{
+  color:rgb(238, 238, 238);
+  font-size: 30px;
+  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.527);
+
 }
 
 .projetos li {
